fix: [CVNG-3199]: enhancing the alignment of spinners (#4926)
* fix: [CVNG-3199]: enhancing the alignment of spinners

* fix: [CVNG-3199]: enhancing the alignment of spinners

* fix: [CVNG-3199]: enhancing the alignment of spinners

* fix: [CVNG-3199]: adding polling

--- a/src/modules/70-pipeline/components/ExecutionVerification/components/LogAnalysisContainer/LogAnalysis.module.scss
+++ b/src/modules/70-pipeline/components/ExecutionVerification/components/LogAnalysisContainer/LogAnalysis.module.scss
@@ -20,10 +20,30 @@
   padding: var(--spacing-small) !important;
   margin-bottom: var(--spacing-large) !important;
   background-color: var(--white) !important;
-  min-height: 70px;
+  min-height: 170px;
 }
 
 .clusterTypeFilter {
   max-width: 250px;
   padding: var(--spacing-medium) var(--spacing-none);
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 170px;
+}
+
+.noData {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 170px;
+  padding-top: var(--spacing-huge) !important;
+}
+
+.refreshButton {
+  display: flex;
+  justify-content: flex-end;
 }
